# GBemu

./: .gitignore  CMakeLists.txt  README.md
include/: cart.h  common.h  cpu.h  emu.h  instructions.h
lib/: CMakeLists.txt  bus.c  cart.c  cpu.c  cpu_proc.c  emu.c  instructions.c
src/: CMakeLists.txt
tests/: CMakeLists.txt
